[gd_scene load_steps=4 format=3 uid="uid://bvf6bs383731d"]

[ext_resource type="Script" path="res://scenes/menu_scenes/main_menu_scene.gd" id="1_e3lrt"]
[ext_resource type="Texture2D" uid="uid://cjrbod2ny5sm" path="res://scenes/menu_scenes/(Another one) Tooth Fairy - Title Screen Concept.svg" id="2_j3h7f"]
[ext_resource type="Theme" uid="uid://b5y6ikdrgasnb" path="res://scenes/menu_scenes/theme.tres" id="3_n142n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3lrt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -36.0
offset_right = 2.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j3h7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.130208
anchor_top = 0.50463
anchor_right = 0.348958
anchor_bottom = 0.739198
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_n142n")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_n142n")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_n142n")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
